[workspace]
members = [".", "app"]
resolver = "3"

[package]
name = "gnucash-sys"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "FFI bindings to libgnucash engine"
keywords = ["gnucash", "accounting", "finance", "ffi", "bindings"]
categories = ["external-ffi-bindings", "finance"]
repository = "https://github.com/user/gnucash-sys"
readme = "README.md"
links = "gnucash"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
dotenvy = "0.15"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "simple_book"
path = "examples/simple_book.rs"

[[example]]
name = "simple_session"
path = "examples/simple_session.rs"

[[example]]
name = "list_accounts"
path = "examples/list_accounts.rs"

[[example]]
name = "account_analysis"
path = "examples/account_analysis.rs"

[[example]]
name = "create_transaction"
path = "examples/create_transaction.rs"

[[example]]
name = "opening_balances"
path = "examples/opening_balances.rs"

[[example]]
name = "price_database"
path = "examples/price_database.rs"

[[example]]
name = "export_csv"
path = "examples/export_csv.rs"

[[example]]
name = "account_tree"
path = "examples/account_tree.rs"

[[example]]
name = "reconcile_account"
path = "examples/reconcile_account.rs"

[[example]]
name = "search_transactions"
path = "examples/search_transactions.rs"

[[example]]
name = "balance_sheet"
path = "examples/balance_sheet.rs"
