[package]
name = "gnucash-ext"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Extended functionality for gnucash-sys (business entities, queries, builders)"
authors = ["Shaun Savage <savages@crmep.cr>"]
homepage = "https://github.com/user/rgnucash"
documentation = "https://docs.rs/rgnucash"
repository = "https://github.com/greenpdx/rgnucash"
readme = "README.md"
keywords = ["gnucash", "accounting", "finance", "invoice", "business"]
categories = ["finance"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "gnucash-app"
path = "src/bin/main.rs"

[dependencies]
rgnucash = { path = ".." }

[build-dependencies]
dotenvy = "0.15"

[[example]]
name = "simple_business"
path = "examples/simple_business.rs"
